Move GetInvolved section up and fix Google Maps embed

--- a/client/global.css
+++ b/client/global.css
@@ -805,6 +805,11 @@
     animation: none !important;
   }
 
+  /* Allow gestures for embedded maps on mobile */
+  .map-iframe {
+    touch-action: auto !important;
+  }
+
   body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
